Name: HTTP
Version: 4000.2.9
Cabal-Version: >= 1.8
Build-type: Simple
License: BSD3
License-file: LICENSE
Author: Warrick Gray <warrick.gray@hotmail.com>
Maintainer: Ganesh Sittampalam <http@projects.haskell.org>
Homepage: https://github.com/haskell/HTTP
Category: Network
Synopsis: A library for client-side HTTP
Description: 

 The HTTP package supports client-side web programming in Haskell. It lets you set up 
 HTTP connections, transmitting requests and processing the responses coming back, all
 from within the comforts of Haskell. It's dependent on the network package to operate,
 but other than that, the implementation is all written in Haskell.
 .
 A basic API for issuing single HTTP requests + receiving responses is provided. On top
 of that, a session-level abstraction is also on offer  (the @BrowserAction@ monad);
 it taking care of handling the management of persistent connections, proxies,
 state (cookies) and authentication credentials required to handle multi-step
 interactions with a web server.
 .
 The representation of the bytes flowing across is extensible via the use of a type class,
 letting you pick the representation of requests and responses that best fits your use.
 Some pre-packaged, common instances are provided for you (@ByteString@, @String@.)
 .
 Here's an example use:
 .
 >
 >    do
 >      rsp <- Network.HTTP.simpleHTTP (getRequest "http://www.haskell.org/")
 >              -- fetch document and return it (as a 'String'.)
 >      fmap (take 100) (getResponseBody rsp)
 >
 >    do
 >      (_, rsp)
 >         <- Network.Browser.browse $ do
 >               setAllowRedirects True -- handle HTTP redirects
 >               request $ getRequest "http://www.haskell.org/"
 >      return (take 100 (rspBody rsp))

Extra-Source-Files: CHANGES

Source-Repository head
  type: git
  location: https://github.com/haskell/HTTP.git

Flag old-base
  description: Old, monolithic base
  default: False

Flag mtl1
  description: Use the old mtl version 1.
  default: False

Flag warn-as-error
  default:     False
  description: Build with warnings-as-errors

Flag network23
  description: Use version 2.3.x or below of the network package
  default: False

Library
  Exposed-modules: 
                 Network.BufferType,
                 Network.Stream,
                 Network.StreamDebugger,
                 Network.StreamSocket,
                 Network.TCP,                
                 Network.HTTP,
                 Network.HTTP.Headers,
                 Network.HTTP.Base,
                 Network.HTTP.Stream,
                 Network.HTTP.Auth,
                 Network.HTTP.Cookie,
                 Network.HTTP.Proxy,
                 Network.HTTP.HandleStream,
                 Network.Browser
  Other-modules:
                 Network.HTTP.Base64,
                 Network.HTTP.MD5Aux,
                 Network.HTTP.Utils
                 Paths_HTTP
  GHC-options: -fwarn-missing-signatures -Wall
  Build-depends: base >= 2 && < 4.8, network < 2.5, parsec
  Extensions: FlexibleInstances
  if flag(old-base)
    Build-depends: base < 3
  else
    Build-depends: base >= 3, array, old-time, bytestring

  if flag(mtl1)
    Build-depends: mtl >= 1.1 && < 1.2
    CPP-Options: -DMTL1
  else
    Build-depends: mtl >= 2.0 && < 2.2

  if flag(warn-as-error)
    ghc-options:      -Werror

  if os(windows)
    Build-depends: Win32

Test-Suite test
  type: exitcode-stdio-1.0

  build-tools: ghc >= 6.10 && < 7.10

  hs-source-dirs: test
  main-is: httpTests.hs

  -- note: version constraints are inherited from HTTP library stanza
  build-depends:     HTTP,
                     HUnit,
                     httpd-shed,
                     mtl >= 2.0 && < 2.2,
                     bytestring >= 0.9 && < 0.11,
                     case-insensitive >= 0.4 && < 1.2,
                     deepseq >= 1.3 && < 1.4,
                     http-types >= 0.6 && < 0.9,
                     conduit >= 0.4 && < 1.1,
                     wai >= 1.2 && < 1.4,
                     -- compile failure with warp 1.3.10
                     warp >= 1.2 && < 1.3.10,
                     pureMD5 >= 2.1 && < 2.2,
                     base >= 2 && < 4.8,
                     network,
                     split >= 0.1 && < 0.3,
                     test-framework,
                     test-framework-hunit

